--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
         </div>
         <div class="my-contacts">
             <div class="contact">
-                <div class="contact-img img-email">email</div>
-                <a href="" class="contact-link"></a>
+                <div class="contact-img img-email"></div>
+                <p>arik2046@gmail.com</p>
             </div>
             <div class="contact">
-                <div class="contact-img">phone</div>
-                <a href="" class="contact-link"></a>
+                <div class="contact-img img-phone"></div>
+                <p>+37544799431</p>
             </div>
             <div class="contact">
-                <div class="contact-img">telegram</div>
-                <a href="" class="contact-link"></a>
+                <div class="contact-img img-telegram"></div>
+                <a href="https://t.me/gznznzjsn" class="contact-link">@gznznzjsn</a>
             </div>
             <div class="contact">
-                <div class="contact-img">linkedin</div>
-                <a href="" class="contact-link"></a>
+                <div class="contact-img img-linkedin"></div>
+                <a href="https://www.linkedin.com/in/gznznzjsn/" class="contact-link">Ярослав Почешинский</a>
             </div>
             <div class="contact">
-                <div class="contact-img">git</div>
-                <a href="" class="contact-link"></a>
+                <div class="contact-img img-github"></div>
+                <a href="https://github.com/gznznzjsn" class="contact-link">gznznzjsn</a>
             </div>
         </div>
     </header>
@@ -117,6 +117,60 @@
             </div>
         </section>
     </div>
+    <section class="section container">
+        <h2 class="title">Projects</h2>
+        <div class="tiles">
+            <div class="tile project-tile">
+                <p class="project-name">Phoneshop</p>
+                <p class="additional-info">Web app</p>
+                <ul class="project-list">
+                    <li>Servlet API</li>
+                    <li>Java</li>
+                    <li>JSP</li>
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>Apache Maven</li>
+                    <li>XML</li>
+                    <li>MVC & DAO patterns</li>
+                </ul>
+                <p class="info">Represents the client-server application, e-shop with the whole functionality of
+                    a real shop (product list, cart, checkout)</p>
+                <a href="https://github.com/gznznzjsn/phoneshop-servlet-api" class="project-link">view on git</a>
+            </div>
+            <div class="tile project-tile">
+                <p class="project-name">Sweater</p>
+                <p class="additional-info">Web app</p>
+                <ul class="project-list">
+                    <li>Spring Framework</li>
+                    <li>PostgreSQL</li>
+                    <li>Java</li>
+                    <li>HTML, CSS, Bootstrap</li>
+                    <li>Apache Maven</li>
+                    <li>Apache FreeMarker</li>
+                    <li>XML</li>
+                </ul>
+                <p class="info">An unended clone of Twitter with messages, stored in database, user roles and
+                    authorization</p>
+
+                <a href="https://github.com/gznznzjsn/sweater" class="project-link">view on git</a>
+            </div>
+            <div class="tile project-tile">
+                <p class="project-name">Students and Rooms</p>
+                <p class="additional-info">Small project</p>
+                <ul class="project-list">
+                    <li>Python</li>
+                    <li>MySQL</li>
+                    <li>SQLAlchemy</li>
+                    <li>.env</li>
+                    <li>ORM</li>
+                    <li>JSON</li>
+                    <li>XML</li>
+                </ul>
+                <p class="info">Works with database and files of different types through command interface</p>
+
+                <a href="https://github.com/gznznzjsn/studentsAndRooms" class="project-link">view on git</a>
+            </div>
+        </div>
+    </section>
     <footer class="footer"></footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
